Trying to figure a way for filters

--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -2,9 +2,11 @@ $colors: (
 	'white': #fff,
 	'black': #000,
 	'subscribe': #58A2D1,
-	'subscribe-btn': #666666,
+	'subscribe-btn': #808080,
+	'subscribe-placeholder': #094260,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333,
+	'footer-dark--text': #cccccc,
 	'footer-title': #58a2d2,
 	'footer-black': #333333,
 	'lifestyle': #DB9AC4,
