--- a/src/index.jade
+++ b/src/index.jade
@@ -44,6 +44,23 @@ block content
 						label
 							input.filter__checkbox(type='checkbox', value='all')
 							| ALL
+				div.filter__container
+					div.filter__button.filter__button--all
+						img.filter__icon--off(src="/images/filter-all-off.png")
+						img.filter__icon--on(src="/images/filter-all-on.png")
+						div.filter__text All
+					div.filter__button.filter__button--fitness
+						img.filter__icon--off(src="/images/filter-fitness-off.png")
+						img.filter__icon--on(src="/images/filter-fitness-on.png")
+						div.filter__text Fitness
+					div.filter__button.filter__button--lifestyle
+						img.filter__icon--off(src="/images/filter-lifestyle-off.png")
+						img.filter__icon--on(src="/images/filter-lifestyle-on.png")
+						div.filter__text Lifestyle
+					div.filter__button.filter__button--food
+						img.filter__icon--off(src="/images/filter-food-off.png")
+						img.filter__icon--on(src="/images/filter-food-on.png")
+						div.filter__text Food
 		div.row
 			div.columns.large-12
 				div.grid
@@ -81,8 +98,8 @@ block content
 				div.columns.large-7.large-centered
 					div.subscribe__title Subscribe to our newsletter
 					div.subscribe__text Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet direct to your inbox, for busy people.
-					div.subscribe__text.subscribe__text--bold I'm interested in
-					form(action="/", method="post")
+					div.subscribe__text--bold I'm interested in
+					form.subscribe__form(action="/", method="post")
 						div.subscribe__checkbox__container
 							input.subscribe__checkbox#subscribe-fitness(type='checkbox', name='subscribe-checkbox')
 							label.subscribe__checkbox__label(for='subscribe-fitness')
