Desktop homepage done?

--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -50,8 +50,6 @@ mixin footer(spec)
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
-					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
 			div.columns.large-2
 				div.footer__container--light__title Food
 				ul.footer__container--light__list
@@ -71,17 +69,13 @@ mixin footer(spec)
 				div.footer__container--light__title Contact
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
+						a.footer__container--light__list__item__link(href="#") Email us
 					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
+						a.footer__container--light__list__item__link(href="#") Press
 					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
+						a.footer__container--light__list__item__link(href="#") Feedback
 					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
-					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
-					li.footer__container--light__list__item
-						a.footer__container--light__list__item__link(href="#") Quisque retrum
+						a.footer__container--light__list__item__link(href="#") Advertising
 	div.footer__container--dark
 		div.row
 			div.columns.large-6
