--- a/src/standard.jade
+++ b/src/standard.jade
@@ -17,7 +17,7 @@ block content
 		div.row
 			div.columns.large-12
 				div.standard__img__container
-					img.standard__img(src="/images/placeholder3.jpg", alt="Article image")
+					img.standard__img(src="/images/unnamed-1-1.jpg", alt="Article image")
 					div.standard__img__text FITNESS
 		div.row
 			div.columns.large-8.large-centered
