--- a/src/standard.jade
+++ b/src/standard.jade
@@ -22,10 +22,10 @@ block content
 		div.row
 			div.columns.large-8.large-centered
 				div.standard__title__container
-					h1 WHY GROUP TRAINING PAYS OFF BETTER IN THE LONG RUN
+					div.standard__title WHY GROUP TRAINING PAYS OFF BETTER IN THE LONG RUN
 				div.standard__stats
 					div.standard__read__container
-						img.standard__read__icon(src="favicon.ico", alt="icon")
+						img.standard__read__icon(src="/images/fitness-read.png", alt="icon")
 						small.standard__read__text 4 MINS READ
 					div.standard__comments 3 <small>COMMENTS</small>
 				div.standard__content
@@ -38,7 +38,7 @@ block content
 					p Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. 
 
 					figure
-						img(src="/images/placeholder.jpg")
+						img(src="/images/Session-4-Butt-hamstrings-and-obliques-circuit-Eat-Pray-Workout_-1024x768.jpg")
 						figcaption Group trainings in the evening unde omnis vero accusamus et atque deserunt.
 
 					p A sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
