--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -9,9 +9,11 @@ $colors: (
 	'footer-dark--text': #cccccc,
 	'footer-title': #58a2d2,
 	'footer-black': #333333,
+	'paragraph': #333333,
 	'lifestyle': #DB9AC4,
 	'fitness': #F6A661,
 	'food': #4CC0B7,
+	'link': #0066CC,
 	'article-grey': #DFDFDF,
 	'article-black': #1A1A1A,
 	'article-author': #666666,
