--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -29,11 +29,17 @@
 		}
 
 		figcaption{
+			@include font('Breakers-Regular');
+			@include m-color('article-black');
 			font-size: 12px;
 		}
 	}
 
 	&__title{
+		@include font('Breakers-Light');
+		@include m-color('article-black');
+		font-size: 42px;
+		line-height: 1;
 
 		&__container{
 			border-bottom: 1px solid grey;
@@ -57,7 +63,9 @@
 		}
 
 		&__text{
-
+			@include font('Breakers-Regular');
+			@include m-color('article-author');
+			font-size: 14px;
 		}
 	}
 
@@ -65,10 +73,15 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		margin-bottom: 50px;
 	}
 
 	&__comments{
+		@include font('Breakers-Regular');
+		@include m-color('article-author');
 		border-left: 1px solid grey;
+		font-size: 18px;
+		padding: 0 12px;
 
 		&--view{
 			display: block;
