--- a/src/_styles/06_components/_components.tag.scss
+++ b/src/_styles/06_components/_components.tag.scss
@@ -2,6 +2,7 @@
 
 	&__container{
 		clear: both;
+		margin-top: 85px;
 	}
 
 	&__list{
@@ -9,8 +10,10 @@
 		margin: 0;
 
 		&__enclosure{
+			@include font('Breakers-Light');
 			display: inline;
 			margin-right: 20px;
+			font-size: 18px;
 		}
 	}
 }
