--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -85,6 +85,7 @@
     &--standard{
         // width: 100%;
         padding: 35px 0;
+        overflow: hidden;
 
         &__frame{
         	height: 480px;
