--- a/src/standard.jade
+++ b/src/standard.jade
@@ -63,9 +63,13 @@ block content
 					div.author__info
 						div.author__name OASHEEY KEY
 						div.author__text Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. <a href="#">Nulla consequat massa quis enim</a>.
+						a.author__social__link(href="#")
+							img(src="/images/facebook-author.png")
+						a.author__social__link(href="#")
+							img(src="/images/twitter-author.png")
 					div.author__join__container--outer
 						div.author__join__container--center
-							div.author__join__container--inner
+							a.author__join__container--inner(href="#")
 								img(src="favicon.ico")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
