--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -40,6 +40,7 @@
 		@include m-color('article-black');
 		font-size: 42px;
 		line-height: 1;
+		margin: 35px 0;
 
 		&__container{
 			border-bottom: 1px solid grey;
