--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -2,5 +2,4 @@ mixin header(spec)
 	- spec = spec || {}
 	- spec.__class = spec.__class || ''
 
-	
-			
+	header(style="height:100px;background-color:red;").header
