--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -1,6 +1,7 @@
 $colors: (
 	'white': #fff,
 	'black': #000,
+	'header': #58a2d2,
 	'subscribe': #58A2D1,
 	'subscribe-btn': #808080,
 	'subscribe-placeholder': #094260,
