--- a/src/_styles/06_components/_components.slick.scss
+++ b/src/_styles/06_components/_components.slick.scss
@@ -2,7 +2,7 @@
 
     &--index{
         // width: 100%;
-        padding: 35px 0;
+        padding: 235px 0 35px;
 
         &__frame{
             height: 700px;
