--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -42,7 +42,8 @@ body
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.1.0/masonry.pkgd.min.js")
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-infinitescroll/2.1.0/jquery.infinitescroll.min.js")
 		script(src="https://npmcdn.com/packery@2.1/dist/packery.pkgd.min.js")
-		script(src="https://npmcdn.com/headroom.js@0.9.3")
+		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js")
+		script(src="https://npmcdn.com/headroom.js@0.9.3/dist/jQuery.headroom.min.js")
 		script(src= baseUrl + 'scripts/main.js')
 		script.
 			$(document).foundation();
