Top margin for standard pages

--- a/src/_styles/06_components/_components.standard.scss
+++ b/src/_styles/06_components/_components.standard.scss
@@ -8,6 +8,8 @@
 		}
 
 		&__text{
+			@include m-color('white');
+			@include font('Breakers-Bold');
 			position: absolute;
 			top: 0;
 			left: 0;
