--- a/src/standard.jade
+++ b/src/standard.jade
@@ -1,7 +1,7 @@
 extends _layouts/base
 
 block content
-	div.container.page--fitness
+	div.container.container--standard.page--fitness
 		div.row
 			div.columns.large-12
 				div.breadcrumb__container
