More sub module

--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -6,6 +6,7 @@ block config
 
 include ../_modules/header/header
 include ../_modules/footer/footer
+include ../_modules/subscribe/subscribe
 
 doctype html
 
