--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -4,6 +4,7 @@
 // Import Modules
 @import '../_modules/header/header';
 @import '../_modules/footer/footer';
+@import '../_modules/subscribe/subscribe';
 
 @import "01_settings/_settings.colors.scss";
 @import "01_settings/_settings.foundation.scss";
