--- a/src/_styles/06_components/_components.subscribe.scss
+++ b/src/_styles/06_components/_components.subscribe.scss
@@ -4,7 +4,11 @@
 	&__container{
 		@include m-bgcolor('subscribe');
 		text-align: center;
-		padding: 50px 0 55px
+		padding: 50px 0 55px;
+		
+		.container--standard &{
+			background-color: rgba(88, 162, 209, 0.8);
+		}
 	}
 
 	// {{subscribe__checkbox}}
