--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -9,11 +9,11 @@ mixin header(spec)
 				div.header__container
 					div.header__menu__container
 						img.header__menu__img(src="/images/menu.png", alt="menu icon")
-						div.header__menu__text Menu
+						div.header__menu__text.show-for-large Menu
 					a(href="/")
 						img.header__logo(src="/images/ALD-logo.png", alt="logo")
 					div.header__right__container
-						div.header__media__container
+						div.header__media__container.show-for-large
 							a(href="#")
 								img.header__facebook(src="/images/facebook.png", alt="facebook")
 								img.header__facebook-white(src="/images/facebook-white.png", alt="facebook")
