--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -22,7 +22,7 @@ mixin footer(spec)
 			div.columns.large-3
 				div.footer__container--light__text Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
 				img.footer__legendairy(src="/images/dairy-australia.png", alt="sponsor")
-			div.columns.large-2.large-offset-1
+			div.columns.large-2.large-offset-1.show-for-large
 				div.footer__container--light__title Fitness
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
@@ -37,7 +37,7 @@ mixin footer(spec)
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
-			div.columns.large-2
+			div.columns.large-2.show-for-large
 				div.footer__container--light__title Health
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
@@ -50,7 +50,7 @@ mixin footer(spec)
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
-			div.columns.large-2
+			div.columns.large-2.show-for-large
 				div.footer__container--light__title Food
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
@@ -65,7 +65,7 @@ mixin footer(spec)
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
 					li.footer__container--light__list__item
 						a.footer__container--light__list__item__link(href="#") Quisque retrum
-			div.columns.large-2
+			div.columns.large-2.show-for-large
 				div.footer__container--light__title Contact
 				ul.footer__container--light__list
 					li.footer__container--light__list__item
