--- a/src/standard.jade
+++ b/src/standard.jade
@@ -73,10 +73,10 @@ block content
 								img(src="favicon.ico")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
-		div(style="background-image: url('/images/placeholder2.jpg');")
+		div.standard__pattern__container(style="background-image: url('/images/pattern.png');")
 			div.slick__container--standard
 				each val in site.data.articlesslickstandard
-					- var grid = (val.grid === "undefined" ? '' : val.grid)
+					- var grid = (val.grid === undefined ? '' : val.grid)
 					div.slick__container--standard__frame
 						div.grid-item--slick-standard(class="#{grid} #{val.type} #{val.category}")
 							a.article__link(href="#")
