--- a/src/_styles/06_components/_components.grid.scss
+++ b/src/_styles/06_components/_components.grid.scss
@@ -45,11 +45,34 @@
 }
 
 // Masonry Articles
-.grid-item-2 { width: 100%; }
-.grid-item-3 { width: 65.5171724138%; }
-.grid-item-4 { width: 48.27586206896552%; }
+.grid-item-2 {
+	width: 100%;
+}
+.grid-item-3 {
+	width: 65.5171724138%;
+}
+.grid-item-4 {
+	width: 48.27586206896552%;
+}
 
 // Slick Articles
-.grid-item-5 { width: 66.66666666666666667%; height: 60%; }
-.grid-item-6 { width: 16.666666666666666665%; height: 20%; }
-.grid-item-7 { width: 33.33333333333333333%; height: 40%; }
+.grid-item-5 {
+	width: 100%;
+	height: 60%;
+
+	@include mq(large){
+		width: 66.66666666666666667%;
+	}
+}
+.grid-item-6 {
+	width: 16.666666666666666665%;
+	height: 20%;
+}
+.grid-item-7 {
+	height: 40%;
+	width: 50%;
+
+	@include mq(large){
+		width: 33.33333333333333333%;
+	}
+}
