--- a/src/index.jade
+++ b/src/index.jade
@@ -18,7 +18,7 @@ block content
 								div.article__text__container--inner
 									h2.article__title #{val.title}
 									if val.author
-										div.article__author__container
+										div.article__author__container.show-for-large
 											if val.author[0].image
 												div.article__author__img(style="background-image:url('#{val.author[0].image}')")
 												div.article__author__name #{val.author[0].name}
