--- a/src/_styles/06_components/_components.article.scss
+++ b/src/_styles/06_components/_components.article.scss
@@ -11,26 +11,30 @@
 		// Hover tag expand full and reduce opacity
 		&:hover, &:focus{
 			text-decoration: none;
-			.article__tag__container--outer{
-				height: 100%;
-				width: 100%;
-				transition: all 0.3s;
 
-				.lifestyle &{
-					background-color: rgba(219, 154, 196, 0.8);
-				}
+			@include mq(large){
 
-				.fitness &{
-					background-color: rgba(246, 166, 97, 0.8);
-				}
+				.article__tag__container--outer{
+					height: 100%;
+					width: 100%;
+					transition: all 0.3s;
 
-				.food &{
-					background-color: rgba(76, 192, 183, 0.8);
+					.lifestyle &{
+						background-color: rgba(219, 154, 196, 0.8);
+					}
+
+					.fitness &{
+						background-color: rgba(246, 166, 97, 0.8);
+					}
+
+					.food &{
+						background-color: rgba(76, 192, 183, 0.8);
+					}
 				}
-			}
-			.article__icon{
-				display: inline;
-				margin-bottom: 10px;
+				.article__icon{
+					display: inline;
+					margin-bottom: 10px;
+				}
 			}
 		}
 	}
@@ -132,6 +136,11 @@
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
+		height: 195px;
+
+		@include mq(large){
+			height: auto;
+		}
 
 		.article--full &{
 
@@ -166,7 +175,11 @@
 		}
 
 		.article--small--half &{
-			height: 45.83333333333333%;
+			height: 195px;
+
+			@include mq(large){
+				height: 45.83333333333333%;
+			}
 		}
 	}
 
@@ -253,10 +266,7 @@
 					background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.5) 100%); /* Chrome10-25,Safari5.1-6 */
 					background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.5) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-
-					@include mq(large){
-						position: absolute;
-					}
+					position: absolute;
 				}
 
 				.article--small--half &{
@@ -271,18 +281,22 @@
 				}
 			}
 
-			//{{article__text__container--inner}}
+			// {{article__text__container--inner}}
 			&--inner{
 
 			}
 		}
 	}
 
-	//{{article__title}}
+	// {{article__title}}
 	&__title{
-		text-transform: uppercase;
+		text-transform: none;
 		font-size: 34px;
 		line-height: 1;
+
+		@include mq(large){
+			text-transform: uppercase;
+		}
 
 		.article--full &{
 			@include m-color('article-black');
@@ -307,13 +321,34 @@
 
 		.article--small--full.grid-item-5 &{
 			@include font('Breakers-Regular');
+			font-size: 15px;
+			margin-bottom: 0;
+
+			@include mq(large){
+				font-size: 34px;
+				margin-bottom: 8px;
+			}
 		}
 		.article--small--full.grid-item-6 &{
 			@include font('Breakers-Regular');
 			font-size: 20px;
+			font-size: 15px;
+			margin-bottom: 0;
+
+			@include mq(large){
+				font-size: 34px;
+				margin-bottom: 8px;
+			}
 		}
 		.article--small--full.grid-item-7 &{
 			@include font('Breakers-Regular');
+			font-size: 15px;
+			margin-bottom: 0;
+
+			@include mq(large){
+				font-size: 34px;
+				margin-bottom: 8px;
+			}
 		}
 	}
 
@@ -367,6 +402,14 @@
 					font-size: 12px;
 				}
 			}
+		}
+	}
+
+	&--small--full{
+		height: 400px;
+
+		@include mq(large){
+			height: auto;
 		}
 	}
 
