--- a/src/_styles/06_components/_components.grid.scss
+++ b/src/_styles/06_components/_components.grid.scss
@@ -15,21 +15,19 @@
 	width: 0.8620689655172425%;
 }
 .grid-item {
-	width: 31.03448275862069%;
+	@include m-bgcolor('article-grey');
+	float: left;
+	width: 100%;
 	margin-bottom: 3.44827586206897%;
+
+	@include mq(large){
+		height: 480px;
+		width: 31.03448275862069%;
+	}
 }
 
 .gutter-sizer{
 	width: 3.44827586206897%;
-}
-
-.grid-item {
-	@include m-bgcolor('article-grey');
-	float: left;
-
-	@include mq(large){
-		height: 480px;
-	}
 }
 
 .grid-item--slick {
@@ -49,10 +47,18 @@
 	width: 100%;
 }
 .grid-item-3 {
-	width: 65.5171724138%;
+	width: 100%;
+
+	@include mq(large){
+		width: 65.5171724138%;
+	}
 }
 .grid-item-4 {
-	width: 48.27586206896552%;
+	width: 100%;
+
+	@include mq(large){
+		width: 48.27586206896552%;
+	}
 }
 
 // Slick Articles
